tests/compile_fail/second_of_three_required.stderr
error: Must specify value for non-defaulted argument: `b`
 --> $DIR/second_of_three_required.rs:3:1
  |
3 | #[named(defaults(a = 1))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
...
9 |     let _ = foo!(c = 8);
  |             ----------- in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
